2010-02-16  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyService.cc: Reorganize the logic to make sure that an
	archive doesn't get closed on timeout if we do not produce the ig
	files. 

2010-02-11  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyMuon.h, ISpyTrackRefitter.h, ISpyBasicCluster.cc,
	ISpyCaloCluster.cc, ISpyElectron.cc, ISpyGsfElectron.cc,
	ISpyGsfPFRecTrack.cc, ISpyGsfTrack.cc, ISpyMuon.cc,
	ISpyPATElectron.cc, ISpyPATMuon.cc, ISpyPFCluster.cc,
	ISpyPFRecTrack.cc, ISpyPreshowerCluster.cc, ISpySuperCluster.cc,
	ISpyTrack.cc, ISpyTrackRefitter.cc, ISpyTrackingParticle.cc:
	Migrate to a new IgAssociations API.

2010-01-28  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyService.h, ISpyService.cc: Add a flag to disable ig file production.
	* python/ispy_35X_cfg.py: Add a new flag for testing. 

2010-01-12 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpy_Producer_cff.py: add CaloMET, CaloTau, PFJet, PFMET, PFTau to sequence
	* ISpyCaloTau, ISpyPFTau: add
	* ispy_35_cfg.py: add

2010-01-07 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPFJet: add

2010-01-06 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPFMET, ISpyCaloMET: add
	
2010-01-06 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyCSCSegment.cc: constrain segment to chamber
	* MakeISpyAnalyzer.py: update to use config for error
	
2009-12-22  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyMET.cc: Migtrated to a new MET data format.

2009-12-08 Ianna Osborne <ianna.osborne@cern.ch>
	
	* ISpyEventSetup.cc: Separate the tracker and RPC geometry to
	barrel detectors and encaps.

2009-12-08 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyPATMET, ISpyPATJet: add

2009-12-08 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyCSCRecHit2D.cc: add time and evolve schema

2009-12-08 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyTrackingRecHit.*: change to VInputTag
	* ISpyTrack.cc, ISpyHBRecHit.cc, ISpyHERecHit.cc, ISpyHORecHit.cc, ISpyHFRecHit.cc, ISpyEBRecHit.cc, ISpyEERecHit.cc, ISpyESRecHit.cc: